--- a/events.html
+++ b/events.html
@@ -32,13 +32,13 @@
       <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav ms-auto">
           <li class="nav-item">
-            <a class="nav-link" aria-current="page" href="#">Home</a>
+            <a class="nav-link" aria-current="page" href="/">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#our_club">Our Clubs</a>
+            <a class="nav-link" href="/#our_club">Our Clubs</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#goals">Goals</a>
+            <a class="nav-link" href="/#goals">Goals</a>
           </li>
           <li class="nav-item">
             <a class="nav-link active" href="/events.html">Events</a>
